fix: 解决安装应用过程中出现的状态异常问题 (#4156)

--- a/backend/i18n/lang/en.yaml
+++ b/backend/i18n/lang/en.yaml
@@ -170,3 +170,5 @@ ErrBanAction: "Setting failed, the current {{ .name }} service is unavailable, p
 #waf
 ErrScope: "Modification of this configuration is not supported"
 ErrStateChange: "State modification failed"
+ErrRuleExist: "Rule is Exist"
+ErrRuleNotExist: "Rule is not Exist"
