--- a/backend/i18n/lang/en.yaml
+++ b/backend/i18n/lang/en.yaml
@@ -172,3 +172,13 @@ ErrScope: "Modification of this configuration is not supported"
 ErrStateChange: "State modification failed"
 ErrRuleExist: "Rule is Exist"
 ErrRuleNotExist: "Rule is not Exist"
+
+#license
+ErrLicense: "License format error, please re-import!"
+ErrLicenseCheckInLocal: "Local license check failed, error {{ .err }}, please try again!"
+ErrLicenseCheckInRemote: "Remote license check failed, error {{ .err }}, please try again!"
+ErrLicenseSave: "Failed to save license information, error {{ .err }}, please try again!"
+ErrLicenseSync: "Failed to synchronize license information, error {{ .err }}, please try again!"
+ErrXpackNotFound: "This section is an Xpack feature, please first import the License in Panel Settings-License interface"
+ErrXpackNotActive: "This section is an Xpack feature, please first synchronize the License status in Panel Settings-License interface"
+ErrXpackOutOfDate: "The current License has expired, please re-import the License in Panel Settings-License interface"
