--- a/backend/i18n/lang/zh-Hant.yaml
+++ b/backend/i18n/lang/zh-Hant.yaml
@@ -173,3 +173,13 @@ ErrScope: "不支援修改此配置"
 ErrStateChange: "狀態修改失敗"
 ErrRuleExist: "規則名稱已存在"
 ErrRuleNotExist: "規則不存在"
+
+#license
+ErrLicense: "License 格式錯誤，請重新匯入！"
+ErrLicenseCheckInLocal: "License 本地校驗失敗，錯誤 {{ .err }}，請重試！"
+ErrLicenseCheckInRemote: "License 遠程校驗失敗，錯誤 {{ .err }}，請重試！"
+ErrLicenseSave: "License 資訊保存失敗，錯誤 {{ .err }}，請重試！"
+ErrLicenseSync: "License 資訊同步失敗，錯誤 {{ .err }}，請重試！"
+ErrXpackNotFound: "該部分為 Xpack 功能，請先在 面板設置-許可證 界面匯入 License"
+ErrXpackNotActive: "該部分為 Xpack 功能，請先在 面板設置-許可證 界面同步 License 狀態"
+ErrXpackOutOfDate: "當前 License 已過期，請重新在 面板設置-許可證 界面匯入 License"
