--- a/backend/i18n/lang/zh.yaml
+++ b/backend/i18n/lang/zh.yaml
@@ -174,7 +174,7 @@ ErrRuleExist: "规则名称已存在"
 ErrRuleNotExist: "规则不存在"
 
 #license
-ErrLicense: "License 格式错误，请重新导入！"
+ErrLicense: "License 格式错误，{{ .err }}，请重新导入！"
 ErrLicenseCheckInLocal: "License 本地校验失败，错误 {{ .err }}，请重试！"
 ErrLicenseCheckInRemote: "License 远程校验失败，错误 {{ .err }}，请重试！"
 ErrLicenseSave: "License 信息保存失败，错误 {{ .err }}，请重试！"
