--- a/backend/i18n/lang/zh-Hant.yaml
+++ b/backend/i18n/lang/zh-Hant.yaml
@@ -173,6 +173,9 @@ ErrScope: "不支援修改此配置"
 ErrStateChange: "狀態修改失敗"
 ErrRuleExist: "規則名稱已存在"
 ErrRuleNotExist: "規則不存在"
+ErrParseIP: "IP 格式錯誤"
+ErrDefaultIP: "default 為保留名稱，請更換其他名稱"
+ErrGroupInUse: "IP 群組被黑/白名單使用，無法刪除"
 
 #license
 ErrLicense: "License 格式錯誤，{{ .err }}，請重新匯入！"
