pref: 优化 Xpack 错误信息 (#4376)

--- a/backend/i18n/lang/en.yaml
+++ b/backend/i18n/lang/en.yaml
@@ -177,11 +177,10 @@ ErrDefaultIP: "default is a reserved name, please change it to another name"
 ErrGroupInUse: "The IP group is used by the black/white list and cannot be deleted"
 
 #license
-ErrLicense: "License format error, {{ .err }}, please re-import!"
-ErrLicenseCheckInLocal: "Local license check failed, error {{ .err }}, please try again!"
-ErrLicenseCheckInRemote: "Remote license check failed, error {{ .err }}, please try again!"
+ErrLicense: "License format error, please check and try again!"
+ErrLicenseCheck: "License verification failed, please check and try again!"
 ErrLicenseSave: "Failed to save license information, error {{ .err }}, please try again!"
-ErrLicenseSync: "Failed to synchronize license information, error {{ .err }}, please try again!"
-ErrXpackNotFound: "This section is an Xpack feature, please first import the License in Panel Settings-License interface"
-ErrXpackNotActive: "This section is an Xpack feature, please first synchronize the License status in Panel Settings-License interface"
-ErrXpackOutOfDate: "The current License has expired, please re-import the License in Panel Settings-License interface"
+ErrLicenseSync: "Failed to sync license information, no license information detected in the database!"
+ErrXpackNotFound: "This section is a professional edition feature, please import the license first in Panel Settings-License interface"
+ErrXpackNotActive: "This section is a professional edition feature, please synchronize the license status first in Panel Settings-License interface"
+ErrXpackOutOfDate: "The current license has expired, please re-import the license in Panel Settings-License interface"
