--- a/backend/i18n/lang/zh-Hant.yaml
+++ b/backend/i18n/lang/zh-Hant.yaml
@@ -178,11 +178,10 @@ ErrDefaultIP: "default 為保留名稱，請更換其他名稱"
 ErrGroupInUse: "IP 群組被黑/白名單使用，無法刪除"
 
 #license
-ErrLicense: "License 格式錯誤，{{ .err }}，請重新匯入！"
-ErrLicenseCheckInLocal: "License 本地校驗失敗，錯誤 {{ .err }}，請重試！"
-ErrLicenseCheckInRemote: "License 遠程校驗失敗，錯誤 {{ .err }}，請重試！"
-ErrLicenseSave: "License 資訊保存失敗，錯誤 {{ .err }}，請重試！"
-ErrLicenseSync: "License 資訊同步失敗，錯誤 {{ .err }}，請重試！"
-ErrXpackNotFound: "該部分為 Xpack 功能，請先在 面板設置-許可證 界面匯入 License"
-ErrXpackNotActive: "該部分為 Xpack 功能，請先在 面板設置-許可證 界面同步 License 狀態"
-ErrXpackOutOfDate: "當前 License 已過期，請重新在 面板設置-許可證 界面匯入 License"
+ErrLicense: "許可證格式錯誤，請檢查後重試！"
+ErrLicenseCheck: "許可證校驗失敗，請檢查後重試！"
+ErrLicenseSave: "許可證信息保存失敗，錯誤 {{ .err }}, 請重試！"
+ErrLicenseSync: "許可證信息同步失敗，資料庫中未檢測到許可證信息！"
+ErrXpackNotFound: "該部分為專業版功能，請先在 面板設置-許可證 界面導入許可證"
+ErrXpackNotActive: "該部分為專業版功能，請先在 面板設置-許可證 界面同步許可證狀態"
+ErrXpackOutOfDate: "當前許可證已過期，請重新在 面板設置-許可證 界面導入許可證"
