--- a/backend/i18n/lang/zh.yaml
+++ b/backend/i18n/lang/zh.yaml
@@ -175,11 +175,13 @@ ErrRuleNotExist: "规则不存在"
 ErrParseIP: "IP 格式错误"
 ErrDefaultIP: "default 为保留名称，请更换其他名称"
 ErrGroupInUse: "IP 组被黑/白名单使用，无法删除"
+ErrGroupExist: "IP 组名称已存在"
+ErrIPRange: "IP 范围错误"
 
 #license
 ErrLicense: "许可证格式错误，请检查后重试！"
-ErrLicenseCheck: 许可证校验失败，请检查后重试！"
-ErrLicenseSave: 许可证信息保存失败，错误 {{ .err }}，请重试！"
+ErrLicenseCheck: "许可证校验失败，请检查后重试！"
+ErrLicenseSave: "许可证信息保存失败，错误 {{ .err }}，请重试！"
 ErrLicenseSync: "许可证信息同步失败，数据库中未检测到许可证信息！"
 ErrXpackNotFound: "该部分为专业版功能，请先在 面板设置-许可证 界面导入许可证"
 ErrXpackNotActive: "该部分为专业版功能，请先在 面板设置-许可证 界面同步许可证状态"
