fix: 创建文件增加非法字符校验 (#4478)

--- a/backend/i18n/lang/zh-Hant.yaml
+++ b/backend/i18n/lang/zh-Hant.yaml
@@ -23,6 +23,7 @@ ErrTypePortRange: '連接埠範圍需要在 1-65535 之間'
 Success: "成功"
 Failed: "失敗"
 SystemRestart: "系統重啟導致任務中斷"
+ErrInvalidChar: "禁止使用非法字元"
 
 #app
 ErrPortInUsed: "{{ .detail }} 端口已被佔用！"
