--- a/backend/i18n/lang/en.yaml
+++ b/backend/i18n/lang/en.yaml
@@ -90,7 +90,7 @@ ErrGroupIsUsed: 'The group is in use and cannot be deleted'
 ErrBackupMatch: 'the backup file does not match the current partial data of the website: {{ .detail}}"'
 ErrBackupExist: 'the backup file corresponds to a portion of the original data that does not exist: {{ .detail}}"'
 ErrPHPResource: 'The local runtime does not support switching！'
-ErrPathPermission: 'A folder with non-1000:1000 permissions was detected in the index directory, which may cause Access denied errors when accessing the website.'
+ErrPathPermission: 'A folder with non-1000:1000 permissions was detected in the index directory, which may cause an Access denied error when accessing the website. Please click the save button above'
 ErrDomainIsUsed: "Domain is already used by website {{ .name }}"
 ErrDomainFormat: "{{ .name }} domain format error"
 
@@ -184,6 +184,7 @@ ErrDefaultIP: "default is a reserved name, please change it to another name"
 ErrGroupInUse: "The IP group is used by the black/white list and cannot be deleted"
 ErrGroupExist: "IP group name already exists"
 ErrIPRange: "Wrong IP range"
+ErrIPExist: "IP is exit"
 
 #license
 ErrLicense: "License format error, please check and try again!"
